2002-04-25 Brian Lindauer <lindauer@sysd.com>

	* lib/b_error.c: added bk_error_istrdump to dump errors to string
	* include/libbk.h: same
	
2002-04-18  Seth Robertson  <seth@startide.sysdetect.com>

	* include/libbk_net.h: Internal version of common network headers (struct ip, etc)

2002-04-15  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_bits.c (bk_bitcount): New function to count numbers of
	bits in a word.

2002-04-05  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_string.c (bk_memrchr): bounded string [buffer] strrchr

2002-04-05  James Tanis  <jtt@saint.sysdetect.com>

	* awb/awb-ids (multiple_places) Convert to use new jobstep stat
	struct instead of two "copyout" u_int's.

	* lib/b_string.c (bk_string_alloc_sprintf): Add more user
	tweakable things to API [and then fix up callers].

2002-04-04  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_string.c (bk_strnspacecmp): bounded string comparison
	ignoring whitespace differences

2002-04-01  Seth Robertson  <seth@startide.sysdetect.com>

	* include/libbk_oscompat.h: Size defintions for those who don't have 'em

	* lib/b_string.c (bk_string_printbuf): It is too confusing when
	address bytes and data bytes are next to each other.

2002-03-28  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_string.c (bk_string_unique_string): Create a (very likely)
	unique string.

	* lib/b_md5.c (bk_MD5_extract_printable): Copy out md5 digest into
	32 byte printabe buffer.

	* lib/b_ioh.c (ioht_vector_queue): Same fix as below. 

	* lib/b_pollio.c (bk_polling_io_write): Keep trying to queue data
	if refused until you either succeed or faile miserably.

	* lib/b_ioh.c (ioh_queue): Don't refuse to queue a large buffer if
	the output queue is empty (even of said buffer exceeds the queue max).

2002-03-27  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_string.c (bk_string_alloc_printf): Function to allocate a
	string with a printf API.

2002-03-28  Seth Robertson  <seth@winwood.sysdetect.com>
